Fix: Fix permission for get services and service packages
